Cleaned up notebook

--- a/Notebooks_Python_DRL_Games_Fall_2021/Technical_project_DRL_Games_Fall_2021/Deep Kung-Fu-with-Advantage-Critic/Deep Kung-Fu with advantage actor-critic.ipynb
+++ b/Notebooks_Python_DRL_Games_Fall_2021/Technical_project_DRL_Games_Fall_2021/Deep Kung-Fu-with-Advantage-Critic/Deep Kung-Fu with advantage actor-critic.ipynb
@@ -54,7 +54,7 @@
       "source": [
         "!pip install gym"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
       "source": [
         "!apt-get install python-opengl -y"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
       "source": [
         "!apt install xvfb -y"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,7 +207,7 @@
         "!pip install pyvirtualdisplay\n",
         "!pip install piglet"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +241,7 @@
         "display = Display(visible=0, size=(1400, 900))\n",
         "display.start()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +274,7 @@
         "    !bash ../xvfb start\n",
         "    %env DISPLAY=:1"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
       "source": [
         "pip install scipy==1.1.0"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +352,7 @@
       "source": [
         "!apt-get install -y python-numpy python-dev cmake zlib1g-dev libjpeg-dev xvfb libav-tools xorg-dev python-opengl libboost-all-dev libsdl2-dev swig"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +384,7 @@
       "source": [
         "!python -m pip install \"gym[atari,accept-rom-license]\"\n"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
         "id": "vSxKeJXPYXjC",
         "outputId": "23bb9c17-b58a-4b31-f880-ff962b6b6acf"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +454,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -601,7 +601,7 @@
       "metadata": {
         "id": "fCZdVhCN5lKK"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -651,7 +651,7 @@
         "print(\"Num actions:\", n_actions)\n",
         "print(\"Action names:\", env.env.env.get_action_meanings())"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,7 +680,7 @@
       "source": [
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -689,8 +689,7 @@
         "id": "m7pd1KapnM0A",
         "outputId": "0493ed58-2e4d-49f0-fb04-769ab9dc147a",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -706,7 +705,7 @@
         "plt.imshow(s.transpose([0,2,1]).reshape([42,-1]))\n",
         "plt.show()"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -768,7 +767,7 @@
         "tf.compat.v1.reset_default_graph()\n",
         "sess = tf.compat.v1.InteractiveSession()"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,7 +847,7 @@
         "        policy = np.exp(logits) / np.sum(np.exp(logits), axis=-1, keepdims=True)\n",
         "        return np.array([np.random.choice(len(p), p=p) for p in policy])"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -928,7 +927,7 @@
       "metadata": {
         "id": "v9wsyTNc5Z7f"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -941,7 +940,7 @@
         "agent = Agent(\"agent\", obs_shape, n_actions)\n",
         "sess.run(tf.compat.v1.global_variables_initializer())"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -959,7 +958,7 @@
         "print(\"action logits:\\n\", logits)\n",
         "print(\"state values:\\n\", value)"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1012,7 +1011,7 @@
         "        game_rewards.append(total_reward)\n",
         "    return game_rewards\n"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1030,7 +1029,7 @@
         "env_monitor.close()\n",
         "print (rw)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1068,7 @@
         "</video>\n",
         "\"\"\" %agent_video) #this may or may not be _last_ video. Try other indices\n"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1136,7 +1135,7 @@
         "        \n",
         "        return new_obs, rewards, done, infos"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1162,7 +1161,7 @@
         "print(\"Rewards:\", batch_rewards[:3])\n",
         "print(\"Done:\", batch_done[:3])\n"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1212,7 +1211,7 @@
         "rewards_ph =  tf.compat.v1.placeholder('float32', (None,))\n",
         "is_done_ph =  tf.compat.v1.placeholder('float32', (None,))"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1233,7 +1232,7 @@
         "# log-probabilities only for agent's chosen actions\n",
         "logp_actions = tf.reduce_sum(logprobs * tf.one_hot(actions_ph, n_actions), axis=-1) # [n_envs,]"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1267,7 +1266,7 @@
         "train_step = tf.compat.v1.train.AdamOptimizer(1e-4).minimize(actor_loss + critic_loss)\n",
         "sess.run(tf.compat.v1.global_variables_initializer())"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1294,7 +1293,7 @@
         "if ent.mean() < np.log(n_actions) / 2: print(\"Entropy is too low for untrained agent\")\n",
         "print(\"You just might be fine!\")"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,7 +1316,7 @@
       "source": [
         "!pip install tqdm"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1357,7 +1356,7 @@
       "source": [
         "!pip install pandas"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1393,7 +1392,7 @@
         "rewards_history = []\n",
         "entropy_history = []\n"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1457,7 +1456,7 @@
         "df = pd.DataFrame(data=batch_rewards)\n",
         "\n"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1497,7 +1496,7 @@
         "\n",
         "video_names = list(filter(lambda s:s.endswith(\".mp4\"),os.listdir(\"./kungfu_videos/\")))"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1507,200 +1506,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BVwb5QCk3YUb",
-        "outputId": "e3c5b470-be52-4c1e-caac-352c99d7c2f4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 362
-        }
-      },
-      "source": [
-        "df.ewm(halflife=12).mean()"
-      ],
-      "execution_count": 80,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "\n",
-              "  <div id=\"df-d073335e-b4df-40ea-9154-4f0e289c9fe4\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d073335e-b4df-40ea-9154-4f0e289c9fe4')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-d073335e-b4df-40ea-9154-4f0e289c9fe4 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d073335e-b4df-40ea-9154-4f0e289c9fe4');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ],
-            "text/plain": [
-              "     0\n",
-              "0  0.0\n",
-              "1  0.0\n",
-              "2  0.0\n",
-              "3  0.0\n",
-              "4  0.0\n",
-              "5  0.0\n",
-              "6  0.0\n",
-              "7  0.0\n",
-              "8  0.0\n",
-              "9  0.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 80
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "jghRDEjNThIH"
-      },
-      "execution_count": 80,
-      "outputs": []
     }
   ]
 }
